--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@release-it/conventional-changelog": "^5.1.1",
     "@types/react": "17.0.2",
     "@types/react-native": "^0.66.3",
     "eslint": "^8.30.0",
@@ -35,6 +36,7 @@
     "react-native": "^0.66.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.8.0",
+    "release-it": "^15.5.1",
     "typescript": "^4.9.4"
   },
   "peerDependencies": {
