--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "prepare": "husky install",
     "lint": "eslint '**/*.{ts,tsx}' --ext .ts,.tsx --fix",
-    "typescript": "npx tsc --noemit"
+    "typescript": "npx tsc --noemit",
+    "release": "npx release-it"
   },
   "author": "JeongShin",
   "repository": "https://github.com/JeongShin/react-native-bottom-sheet-ui",
@@ -26,6 +27,7 @@
     "@release-it/conventional-changelog": "^5.1.1",
     "@types/react": "17.0.2",
     "@types/react-native": "^0.66.3",
+    "auto-changelog": "^2.4.0",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
