chore: fix release it config

--- a/.release-it.json
+++ b/.release-it.json
@@ -9,6 +9,10 @@
   "github": {
     "release": true
   },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
   "plugins": {
     "@release-it/conventional-changelog": {
       "preset": {
