chore: fix eslint config & import orders

--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@types/react-native": "^0.66.3",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
