--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "react-native-bottom-sheet-ui",
   "version": "0.4.2",
   "description": "Simple & easy bottom sheet UI",
-  "main": "dist/index",
-  "module": "dist/index",
-  "types": "dist/index.d.ts",
+  "main": "lib/commonjs/index.js",
+  "module": "lib/module/index.js",
+  "types": "lib/typescript/index.d.ts",
+  "react-native": "src/index.ts",
+  "files": [
+    "lib/",
+    "src/"
+  ],
   "scripts": {
     "prepare": "husky install",
     "lint": "eslint '**/*.{ts,tsx}' --ext .ts,.tsx --fix",
     "typescript": "npx tsc --noemit",
-    "release": " npx release-it",
-    "build": "yarn typescript && rm -rf dist && npx tsc"
+    "release": "rm -rf lib && yarn build && release-it",
+    "build": "bob build"
   },
   "author": "JeongShin",
   "repository": "https://github.com/JeongShin/react-native-bottom-sheet-ui",
@@ -41,8 +46,9 @@
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
-    "react": "~17.0.2",
-    "react-native": "^0.66.3",
+    "react": "^17.0.2",
+    "react-native": "^0.66.4",
+    "react-native-builder-bob": "^0.20.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.8.0",
     "release-it": "^15.5.1",
@@ -51,8 +57,22 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "react-native-gesture-handler": ">=1.10.1",
-    "react-native-reanimated": ">=2.2.0"
+    "react-native-gesture-handler": ">=1.10.3",
+    "react-native-reanimated": ">=2.8.0"
+  },
+  "react-native-builder-bob": {
+    "source": "src",
+    "output": "lib",
+    "targets": [
+      [
+        "commonjs",
+        {
+          "copyFlow": true
+        }
+      ],
+      "module",
+      "typescript"
+    ]
   },
   "lint-staged": {
     "src/**/*.{ts,tsx}": [
