--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "outDir": "./dist",
+    "outDir": "./lib",
     "lib": ["esnext"],
     "jsx": "react",
     "strict": true,
@@ -13,11 +13,7 @@
     "removeComments": false,
     "isolatedModules": false,
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",
-    "baseUrl": "./src",
-    "paths": {
-      "@/*": ["./*"]
-    }
+    "moduleResolution": "node"
   },
   "include": ["src/**/*.tsx", "src/**/*.d.ts", "src/**/*.ts"],
   "exclude": ["node_modules"]
