--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "eslint '**/*.{ts,tsx}' --ext .ts,.tsx --fix",
     "typescript": "npx tsc --noemit",
     "release": "rm -rf lib && yarn build && release-it",
-    "build": "bob build"
+    "build": "npx bob build"
   },
   "author": "JeongShin",
   "repository": "https://github.com/JeongShin/react-native-global-components",
