--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-global-components",
   "version": "0.0.3",
-  "description": "Simple & easy bottom sheet UI",
+  "description": "react native global components including SnackBar, PopUp, BottomSheet",
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
   "types": "lib/typescript/index.d.ts",
