--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-global-components",
   "version": "0.0.4",
-  "description": "react native global components including SnackBar, PopUp, BottomSheet",
+  "description": "react native global components including Snackbar, Popup, BottomSheet",
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
   "types": "lib/typescript/index.d.ts",
@@ -22,8 +22,8 @@
   "keywords": [
     "react",
     "react-native",
-    "snack-bar",
-    "pop-up",
+    "snackbar",
+    "popup",
     "bottom-sheet",
     "reanimated"
   ],
