--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "scripts": {
     "prepare": "npx husky install",
     "lint": "eslint '**/*.{ts,tsx}' --ext .ts,.tsx --fix",
-    "typescript": "tsc --noemit",
+    "typescript": "npx tsc --noemit",
     "patch": "rm -rf lib && yarn build && release-it patch --npm.skipChecks",
     "minor": "rm -rf lib && yarn build && release-it minor --npm.skipChecks",
     "major": "rm -rf lib && yarn build && release-it major --npm.skipChecks",
-    "build": "bob build"
+    "build": "npx bob build"
   },
   "author": "JeongShin",
   "repository": "https://github.com/JeongShin/react-native-global-components",
