--- a/.release-it.json
+++ b/.release-it.json
@@ -14,6 +14,9 @@
     "registry": "https://registry.npmjs.org"
   },
   "plugins": {
+    "release-it-yarn-workspaces": {
+      "skipChecks": true
+    },
     "@release-it/conventional-changelog": {
       "preset": {
         "name": "conventionalcommits",
