--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@release-it-plugins/workspaces": "^3.2.0",
     "@release-it/conventional-changelog": "^5.1.1",
     "@types/react": "17.0.2",
     "@types/react-native": "^0.66.3",
