--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "src/"
   ],
   "scripts": {
-    "prepare": "npx husky install",
+    "prepare": "husky install",
     "lint": "eslint '**/*.{ts,tsx}' --ext .ts,.tsx --fix",
-    "typescript": "npx tsc --noemit",
-    "patch": "rm -rf lib && yarn build && npx release-it patch",
-    "minor": "rm -rf lib && yarn build && npx release-it minor",
-    "major": "rm -rf lib && yarn build && npx release-it major",
-    "build": "npx bob build"
+    "typescript": "tsc --noemit",
+    "patch": "rm -rf lib && yarn build && release-it patch --npm.skipChecks",
+    "minor": "rm -rf lib && yarn build && release-it minor --npm.skipChecks",
+    "major": "rm -rf lib && yarn build && release-it major --npm.skipChecks",
+    "build": "bob build"
   },
   "author": "JeongShin",
   "repository": "https://github.com/JeongShin/react-native-global-components",
