--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "prepare": "husky install",
     "lint": "eslint '**/*.{ts,tsx}' --ext .ts,.tsx --fix",
     "typescript": "tsc --noemit",
-    "patch": "rm -rf lib && yarn build && release-it patch --npm.skipChecks",
-    "minor": "rm -rf lib && yarn build && release-it minor --npm.skipChecks",
-    "major": "rm -rf lib && yarn build && release-it major --npm.skipChecks",
+    "patch": "rm -rf lib && yarn build && release-it patch",
+    "minor": "rm -rf lib && yarn build && release-it minor",
+    "major": "rm -rf lib && yarn build && release-it major",
     "build": "bob build"
   },
   "author": "JeongShin",
