--- a/.release-it.json
+++ b/.release-it.json
@@ -12,7 +12,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org"
+    "registry": "https://registry.yarnpkg.com"
   },
   "plugins": {
     "@release-it/conventional-changelog": {
