--- a/package.json
+++ b/package.json
@@ -1,26 +1,98 @@
 {
+  "author": "JeongShin",
+  "repository": "https://github.com/JeongShin/react-native-global-components",
+  "description": "react native snackbar and popup API generator 🙇🏻‍♂️",
   "name": "react-native-global-components",
-  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "module": "lib/module/index.js",
+  "types": "lib/typescript/index.d.ts",
+  "version": "0.0.15",
+  "files": [
+    "lib/",
+    "packages/"
+  ],
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "prepare": "husky install",
+    "lint": "eslint '**/*.{ts,tsx}' --ext .ts,.tsx --fix",
+    "typescript": "tsc --noemit",
+    "patch": "rm -rf lib && yarn build && release-it patch",
+    "minor": "rm -rf lib && yarn build && release-it minor",
+    "major": "rm -rf lib && yarn build && release-it major",
+    "build": "bob build"
   },
   "dependencies": {
-    "expo": "~47.0.12",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
+    "expo": "^45.0.0",
+    "expo-status-bar": "~1.3.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-web": "0.17.7",
+    "rxjs": "^7.2.0"
   },
+  "keywords": [
+    "react",
+    "react-native",
+    "snackbar",
+    "popup",
+    "bottom-sheet",
+    "reanimated"
+  ],
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/react": "~18.0.14",
-    "@types/react-native": "~0.70.6",
-    "typescript": "^4.6.3"
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "@release-it/conventional-changelog": "^5.1.1",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.67.6",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "eslint": "^8.30.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.0.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.1.0",
+    "prettier": "^2.8.1",
+    "react-native-builder-bob": "^0.20.3",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.8.0",
+    "release-it": "^15.6.0",
+    "typescript": "^4.9.4"
   },
-  "private": true
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*",
+    "react-native-gesture-handler": ">=1.10.3",
+    "react-native-reanimated": ">=2.8.0"
+  },
+  "react-native-builder-bob": {
+    "source": "packages",
+    "output": "lib",
+    "targets": [
+      [
+        "commonjs",
+        {
+          "copyFlow": true
+        }
+      ],
+      "module",
+      "typescript"
+    ]
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
+  "license": "MIT"
 }
