--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "patch": "rm -rf lib && yarn build && release-it patch",
     "minor": "rm -rf lib && yarn build && release-it minor",
     "major": "rm -rf lib && yarn build && release-it major",
-    "build": "tsc"
+    "build": "tsc --project tsconfig.build.json"
   },
   "dependencies": {
     "expo": "^45.0.0",
