--- a/packages/package.json
+++ b/packages/package.json
@@ -3,12 +3,13 @@
   "repository": "https://github.com/JeongShin/react-native-global-components",
   "description": "react native snackbar and popup API generator 🙇🏻‍♂️",
   "name": "react-native-global-components",
-  "main": "lib/index.js",
-  "module": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "lib/commonjs/index.js",
+  "module": "lib/module/index.js",
+  "types": "lib/typescript/index.d.ts",
   "version": "0.0.20",
   "files": [
-    "lib/"
+    "lib/",
+    "src/"
   ],
   "scripts": {
     "prepare": "cd .. && husky install",
@@ -17,7 +18,8 @@
     "patch": "rm -rf lib && yarn build && release-it patch",
     "minor": "rm -rf lib && yarn build && release-it minor",
     "major": "rm -rf lib && yarn build && release-it major",
-    "build": "tsc --project tsconfig.build.json"
+    "tsc-build": "tsc --project tsconfig.build.json",
+    "build": "bob build"
   },
   "dependencies": {
     "react": "17.0.2",
@@ -67,7 +69,7 @@
     "react-native-reanimated": ">=2.8.0"
   },
   "react-native-builder-bob": {
-    "source": "packages",
+    "source": "src",
     "output": "lib",
     "targets": [
       [
