--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -3,7 +3,6 @@
     "strict": true,
     "target": "esnext",
     "module": "esnext",
-    "outDir": "./lib",
     "lib": ["esnext"],
     "jsx": "react-native",
     "pretty": true,
@@ -13,8 +12,7 @@
     "removeComments": false,
     "isolatedModules": false,
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node",
-    "noEmit": false
+    "moduleResolution": "node"
   },
   "include": ["src/**/*.tsx", "src/**/*.d.ts", "src/**/*.ts"],
   "exclude": ["node_modules"]
