--- a/packages/package.json
+++ b/packages/package.json
@@ -36,13 +36,12 @@
     "reanimated"
   ],
   "devDependencies": {
-    "@babel/core": "^7.12.9",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@release-it/conventional-changelog": "^5.1.1",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.67.6",
+    "@types/react": "17.0.2",
+    "@types/react-native": "^0.66.3",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "eslint": "^8.30.0",
@@ -56,6 +55,8 @@
     "husky": "^8.0.2",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
+    "react": "^17.0.2",
+    "react-native": "^0.66.4",
     "react-native-builder-bob": "^0.20.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.8.0",
