--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "paths": {
+      "react-native-global-components": ["./packages/src/index"]
+    },
     "strict": true
   }
 }
