--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "patch": "yarn build && cd lib && release-it patch",
     "minor": "yarn build && cd lib && release-it minor",
     "major": "yarn build && cd lib && release-it major",
-    "build": "tsc --project tsconfig.build.json"
+    "build": "tsc --project tsconfig.build.json",
+    "storybook": "start-storybook -p 7007",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "expo": "^45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
@@ -32,10 +35,18 @@
     "@commitlint/config-conventional": "^17.3.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@release-it/conventional-changelog": "^5.1.1",
+    "@storybook/addon-actions": "^5.3",
+    "@storybook/addon-knobs": "^5.3",
+    "@storybook/addon-links": "^5.3",
+    "@storybook/addon-ondevice-actions": "^5.3.23",
+    "@storybook/addon-ondevice-knobs": "^5.3.26",
+    "@storybook/react-native": "^5.3.27",
+    "@storybook/react-native-server": "^5.3.23",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
+    "babel-loader": "^8.3.0",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.2",
@@ -48,10 +59,10 @@
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "react-native-builder-bob": "^0.20.3",
-    "release-it": "^15.6.0",
-    "typescript": "^4.9.4",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "^2.8.0"
+    "react-native-reanimated": "^2.8.0",
+    "release-it": "^15.6.0",
+    "typescript": "^4.9.4"
   },
   "lint-staged": {
     "packages/**/*.{ts,tsx}": [
