feat: add test config

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -13,7 +13,9 @@
     "isolatedModules": false,
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
-    "outDir": "./lib"
+    "outDir": "./lib",
+    "esModuleInterop": true,
+    "allowJs": true
   },
   "include": ["packages/**/*.tsx", "packages/**/*.d.ts", "packages/**/*.ts"],
   "exclude": ["node_modules"]
