--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "major": "yarn build && cd lib && release-it major",
     "build": "tsc --project tsconfig.build.json",
     "storybook": "start-storybook -p 7007",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "jest": "jest --runInBand",
+    "test": "jest"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
@@ -31,8 +33,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@jest/types": "^27.5.1",
     "@react-native-community/eslint-config": "^3.2.0",
     "@release-it/conventional-changelog": "^5.1.1",
     "@storybook/addon-actions": "^5.3",
@@ -42,10 +48,15 @@
     "@storybook/addon-ondevice-knobs": "^5.3.26",
     "@storybook/react-native": "^5.3.27",
     "@storybook/react-native-server": "^5.3.23",
+    "@testing-library/jest-native": "^5.4.1",
+    "@testing-library/react-native": "^10.1.1",
+    "@types/jest": "^29.4.0",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
+    "@types/react-test-renderer": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
+    "babel-jest": "^29.4.1",
     "babel-loader": "^8.3.0",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
@@ -56,12 +67,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.0.0",
     "husky": "^8.0.2",
+    "jest": "^27.5.1",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "react-native-builder-bob": "^0.20.3",
-    "react-native-gesture-handler": "^1.10.3",
-    "react-native-reanimated": "^2.8.0",
+    "react-test-renderer": "^17.0.2",
     "release-it": "^15.6.0",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "lint-staged": {
@@ -69,6 +82,11 @@
       "eslint --fix",
       "prettier --write"
     ]
+  },
+  "resolutions": {
+    "@types/react": "17.0.21",
+    "@types/react-native": "0.67.6",
+    "@types/react-dom": "^17.0.2"
   },
   "license": "MIT"
 }
