chore: fix readme & package json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-native-global-components-expo",
   "main": "node_modules/expo/AppEntry.js",
   "version": "1.0.0",
+  "homepage": "https://jeongshin.github.io/",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
