--- a/lib/package.json
+++ b/lib/package.json
@@ -1,7 +1,8 @@
 {
-  "author": "JeongShin",
-  "repository": "https://github.com/JeongShin/react-native-global-components",
   "description": "react native snackbar and popup API generator 🙇🏻‍♂️",
+  "homepage": "https://jeongshin.github.io/",
+  "repository": "https://github.com/JeongShin/react-native-global-components",
+  "author": "JeongShin (https://github.com/JeongShin)",
   "name": "react-native-global-components",
   "main": "index.js",
   "types": "index.d.ts",
