--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
     "react-native-web": "~0.18.7",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -52,11 +52,11 @@
     "@storybook/react-native": "^5.3.27",
     "@storybook/react-native-server": "^5.3.23",
     "@testing-library/jest-native": "^5.4.1",
-    "@testing-library/react-native": "^11.5.1",
+    "@testing-library/react-native": "^11.5.2",
     "@types/jest": "^29.4.0",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
-    "@types/react-test-renderer": "^17.0.0",
+    "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "babel-jest": "^29.4.1",
@@ -74,9 +74,8 @@
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "react-native-builder-bob": "^0.20.3",
-    "react-test-renderer": "^17.0.2",
+    "react-test-renderer": "^18.1.0",
     "release-it": "^15.6.0",
-    "ts-jest": "^27.1.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.6.3"
   },
@@ -87,9 +86,8 @@
     ]
   },
   "resolutions": {
-    "@types/react": "17.0.21",
-    "@types/react-native": "0.67.6",
-    "@types/react-dom": "^17.0.2"
+    "@types/react": "17.0.43",
+    "@types/react-native": "0.70.6"
   },
   "license": "MIT"
 }
