--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "expo": "^47.0.0",
     "expo-status-bar": "~1.4.2",
@@ -31,7 +33,7 @@
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-reanimated": "~2.12.0",
-    "react-native-web": "~0.18.7",
+    "react-native-web": "~0.18.9",
     "rxjs": "^7.2.0"
   },
   "devDependencies": {
@@ -86,7 +88,7 @@
     ]
   },
   "resolutions": {
-    "@types/react": "17.0.43",
+    "@types/react": "^18.0.21",
     "@types/react-native": "0.70.6"
   },
   "license": "MIT"
