--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
+    "web": "npx expo start --web",
     "prepare": "husky install",
     "lint": "eslint '**/*.{ts,tsx}' --ext .ts,.tsx --fix",
     "typescript": "tsc --noemit",
@@ -24,7 +24,6 @@
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "expo": "^47.0.0",
     "expo-status-bar": "~1.4.2",
@@ -43,6 +42,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
+    "@expo/webpack-config": "^0.17.2",
     "@jest/types": "^27.5.1",
     "@react-native-community/eslint-config": "^3.2.0",
     "@release-it/conventional-changelog": "^5.1.1",
@@ -63,6 +63,7 @@
     "@typescript-eslint/parser": "^5.47.0",
     "babel-jest": "^29.4.1",
     "babel-loader": "^8.3.0",
+    "babel-preset-expo": "^9.2.2",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.2",
