--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "npx expo start --web",
+    "web": "expo start --web",
     "prepare": "husky install",
     "lint": "eslint '**/*.{ts,tsx}' --ext .ts,.tsx --fix",
     "typescript": "tsc --noemit",
@@ -20,7 +20,8 @@
     "storybook": "start-storybook -p 7007",
     "build-storybook": "build-storybook",
     "jest": "jest --runInBand",
-    "test": "jest"
+    "test": "jest",
+    "build-static-webapp": "expo export:web"
   },
   "dependencies": {
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
@@ -37,6 +38,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.20.11",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
