--- a/lib/package.json
+++ b/lib/package.json
@@ -22,7 +22,8 @@
     "react": "*",
     "react-native": "*",
     "react-native-gesture-handler": ">=1.10.3",
-    "react-native-reanimated": ">=2.8.0"
+    "react-native-reanimated": ">=2.8.0",
+    "react-native-screens": ">=3.14.0"
   },
   "license": "MIT"
 }
