--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.20.11",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
@@ -80,6 +80,7 @@
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "react-native-builder-bob": "^0.20.3",
+    "react-native-screens": "^3.20.0",
     "react-test-renderer": "^18.1.0",
     "release-it": "^15.6.0",
     "ts-node": "^10.9.1",
