feat: set up v1

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -17,6 +17,10 @@
     "esModuleInterop": true,
     "allowJs": true
   },
-  "include": ["packages/**/*.tsx", "packages/**/*.d.ts", "packages/**/*.ts"],
+  "include": [
+    "packages/v1/**/*.tsx",
+    "packages/v1/**/*.d.ts",
+    "packages/v1/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
