--- a/lib/package.json
+++ b/lib/package.json
@@ -1,5 +1,5 @@
 {
-  "description": "react native snackbar and popup API generator 🙇🏻‍♂️",
+  "description": "Popup API generator for React Native 🙇🏻‍♂️",
   "homepage": "https://jeongshin.github.io/",
   "repository": "https://github.com/JeongShin/react-native-global-components",
   "author": "JeongShin (https://github.com/JeongShin)",
