--- a/package.json
+++ b/package.json
@@ -24,18 +24,18 @@
     "build-static-webapp": "expo export:web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "expo": "^47.0.0",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-native": "0.70.8",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-reanimated": "^3.6.1",
-    "react-native-web": "~0.18.9"
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "expo": "~51.0.19",
+    "expo-status-bar": "~1.12.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.74.3",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
+    "@babel/core": "^7.24.0",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-modules-commonjs": "^7.20.11",
@@ -44,7 +44,7 @@
     "@babel/preset-typescript": "^7.18.6",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
-    "@expo/webpack-config": "^0.17.2",
+    "@expo/webpack-config": "~19.0.1",
     "@jest/types": "^27.5.1",
     "@react-native-community/eslint-config": "^3.2.0",
     "@release-it/conventional-changelog": "^5.1.1",
@@ -58,14 +58,14 @@
     "@testing-library/jest-native": "^5.4.1",
     "@testing-library/react-native": "^11.5.2",
     "@types/jest": "^29.4.0",
-    "@types/react": "~18.0.24",
+    "@types/react": "~18.2.79",
     "@types/react-native": "~0.70.6",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "babel-jest": "^29.4.1",
     "babel-loader": "^8.3.0",
-    "babel-preset-expo": "^9.2.2",
+    "babel-preset-expo": "~11.0.0",
     "eslint": "^8.30.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.2",
@@ -75,14 +75,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.0.0",
     "husky": "^8.0.2",
-    "jest": "^26.6.3",
+    "jest": "^29.4.0",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "react-native-builder-bob": "^0.20.3",
     "react-test-renderer": "^18.1.0",
     "release-it": "^15.6.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.6.3"
+    "typescript": "~5.3.3"
   },
   "lint-staged": {
     "packages/**/*.{ts,tsx}": [
