--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "main": "node_modules/expo/AppEntry.js",
   "version": "1.0.0",
   "homepage": "https://jeongshin.github.io/",
-  "repository": "https://github.com/JeongShin/react-native-global-components",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JeongShin/react-native-global-components.git"
+  },
   "author": "JeongShin (https://github.com/JeongShin)",
   "scripts": {
     "start": "expo start",
