--- a/lib/package.json
+++ b/lib/package.json
@@ -15,6 +15,10 @@
     "bottom-sheet",
     "reanimated"
   ],
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
